--- a/www/media/slideshow/style.css
+++ b/www/media/slideshow/style.css
@@ -7,6 +7,7 @@
     -moz-border-radius-bottomright: 10px;
     background-color: #F0F6F9;
     border: 1px solid #346F97;
+    padding-bottom: 1em;
     width: 375px!important;
 }
 
